-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.0, Lustre 2.10.6
-
None
-
3
-
9223372036854775807
There is an incorrect assert in lod_ea_store_resize which leads to an LBUG with very high stripe counts. (I didn't calculate precisely, but 1300 is OK and 1600 triggers the bug.)
The fix is trivial. Patch forthcoming.
- is related to
-
LU-9846 Overstriping - more than stripe per OST per component
-
- Resolved
-